# voting-tools

./: .gitignore  CHANGELOG.md  MANUAL.md  MANUAL.org  Main.hs  Makefile  README.md  RELEASE.md  bors.toml  cabal-nix.project  cabal.project  default.nix  flake.nix  release.nix  shell.nix  voter-registration.cabal  voting-tools.cabal
.buildkite/: pipeline.yml
docs/: plant.uml
fetch/: fetch-registration.cabal
fetch/src/: Config.hs  Main.hs
nix/: default.nix  haskell.nix  pkgs.nix  sources.json  tullia.nix  voter-registration-haskell.nix
nix/nixos/tests/: db-password-auth.nix  db-tests.nix  default.nix  mock-db.nix  submit-vote.nix
nix/nixos/tests/mock-db/: block.csv  out.json  slot_leader.csv  stake_address.csv  tx.csv  tx_in.csv  tx_metadata.csv  tx_out.csv
registration/: README.md  cabal.project  default.nix  shell.nix  voter-registration.cabal
registration/app/: Main.hs
registration/src/: Config.hs  Fetch.hs  Main.hs
registration/src-2/: Main.hs
registration/src-2/Cardano/CLI/: Query.hs
registration/src/Cardano/API/: Extended.hs  Jormungandr.hs
registration/src/Cardano/API/Extended/: Raw.hs
registration/src/Cardano/CLI/: Fetching.hs  Query.hs  Voting.hs
registration/src/Cardano/CLI/Voting/: Error.hs  Fee.hs  Metadata.hs  Signing.hs
registration/src/Config/: Registration.hs
registration/test/: Main.hs
registration/test/Test/: Generators.hs
registration/test/Test/Cardano/CLI/: Fetching.hs
registration/test/Test/Cardano/CLI/Voter/: Registration.hs
src/: Config.hs  Contribution.hs  Encoding.hs  Extern.hs  Fetch.hs  Genesis.hs  Main.hs  Register.hs  Registration.hs  RegistrationAlgebra.hs  Snapshot.hs  repl.hs
src/CLI/: Interop.hs  Jormungandr.hs
src/Cardano/API/: Exposed.hs  Extended.hs  Jormungandr.hs  Misc.hs  Voting.hs
src/Cardano/API/Extended/: Raw.hs
src/Cardano/CLI/: DbSyncQuery.hs  Fetching.hs  Query.hs  Voting.hs
src/Cardano/CLI/Voting/: Error.hs  Fee.hs  Metadata.hs  Signing.hs
src/Cardano/Catalyst/: Crypto.hs  Presentation.hs  Registration.hs  VotePower.hs
src/Cardano/Catalyst/Query/: Esqueleto.hs  Sql.hs  Types.hs
src/Cardano/Catalyst/Registration/: Types.hs
src/Cardano/Catalyst/Registration/Types/: Purpose.hs
src/Cardano/Catalyst/Test/: DSL.hs
src/Cardano/Catalyst/Test/DSL/: Gen.hs
src/Cardano/Catalyst/Test/DSL/Internal/: Db.hs  Types.hs
src/Cardano/Catalyst/Test/Presentation/: Gen.hs
src/Cardano/Catalyst/Test/VotePower/: Gen.hs
src/Cardano/Db/: Extended.hs
src/Config/: Common.hs  Fetch.hs  Genesis.hs  Registration.hs  Rewards.hs  Snapshot.hs
src/Contribution/: Efficient.hs  Initial.hs
src/Registration/: Efficient.hs  Initial.hs
src/Test/: Generators.hs
test/: Main.hs
test/Test/: Contribution.hs  Generators.hs  Genesis.hs  Registration.hs  Snapshot.hs
test/Test/Cardano/API/: Extended.hs  Jormungandr.hs
test/Test/Cardano/CLI/: Fetching.hs
test/Test/Cardano/CLI/Voter/: Registration.hs
test/Test/Cardano/CLI/Voting/: Metadata.hs  Signing.hs
test/Test/Cardano/Catalyst/: Crypto.hs  Presentation.hs  Registration.hs  VotePower.hs
test/integration/: Main.hs  vm.nix
test/integration/Test/Cardano/Catalyst/: Db.hs  Helpers.hs  Query.hs
tools/: cabal.project  voting-tools.cabal
