cabal-version:       >=1.10
name:                voter-registration
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src

  exposed-modules:     CLI.Interop
                     , CLI.Jormungandr
                     , Extern
                     , Encoding
                     , Config

  build-depends:       base
                     , base16-bytestring
                     , safe-exceptions
                     , directory
                     , memory
                     , mtl
                     , text
                     , turtle
                     , containers
                     , cardano-crypto-class
                     , bytestring
                     , lens
                     , bech32
                     , optparse-applicative
                     , attoparsec

                     , transformers-except
                     , cardano-api
                     , ouroboros-network
                     , ouroboros-consensus
                     , ouroboros-consensus-shelley
                     , cardano-node
                     , shelley-spec-ledger
                     , cardano-cli
                     , ouroboros-consensus-cardano

executable voter-registration
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , cardano-api
                     , cardano-cli
                     , mtl
                     , optparse-applicative
                     , voter-registration

                     , containers
                     , cardano-ledger
                     , lens

  -- hs-source-dirs:
  default-language:    Haskell2010