cabal-version:       >=1.10
name:                voter-registration
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src

  exposed-modules:     CLI.Interop
                     , CLI.Jormungandr
                     , Cardano.CLI.Voting
                     , Cardano.CLI.Voting.Error
                     , Cardano.CLI.Voting.Fee
                     , Cardano.API.Extended
                     , Cardano.API.Extended.Raw
                     , Extern
                     , Encoding
                     , Config
                     , Cardano.API.Voting

  build-depends:       base
                     , base16-bytestring
                     , safe-exceptions
                     , directory
                     , memory
                     , mtl
                     , text
                     , turtle
                     , containers
                     , cardano-crypto-class
                     , bytestring
                     , lens
                     , bech32
                     , optparse-applicative
                     , attoparsec
                     , cardano-binary
                     , aeson-pretty
                     , ouroboros-network-framework

                     , transformers-except
                     , cardano-api
                     , ouroboros-network
                     , ouroboros-consensus
                     , ouroboros-consensus-shelley
                     , cardano-node
                     , shelley-spec-ledger
                     , cardano-cli
                     , ouroboros-consensus-cardano

executable voter-registration
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , cardano-api
                     , cardano-cli
                     , mtl
                     , optparse-applicative
                     , bytestring
                     , voter-registration
                     , ouroboros-network
                     , cardano-crypto-class
                     , cardano-binary

                     , containers
                     , cardano-ledger
                     , lens

  -- hs-source-dirs:
  default-language:    Haskell2010

-- test-suite voter-registration-test
--   hs-source-dirs: test
--   main-is: Main.hs
--   type:                 exitcode-stdio-1.0

--   build-depends:
--                         base >=4.12 && <5
--                       , voter-registration
--                       , aeson
--                       , hspec
--                       , hedgehog
--                       , QuickCheck
--                       , tasty
--                       , mtl
--                       , tasty-hedgehog
--                       , tasty-quickcheck
--                       , tasty-hspec
--                       , unordered-containers
--                       , tasty-hunit
--                       , HUnit
--                       , containers
--                       , cardano-api

--   other-modules:      Test.Cardano.CLI.Voter.Registration  