cabal-version:       3.0
name:                voting-tools
version:             0.2.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
-- copyright:
-- cate gory:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common project-config
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:              project-config
  hs-source-dirs:      src

  exposed-modules:     Cardano.API.Extended
                     , Cardano.API.Extended.Raw
                     , Cardano.API.Jormungandr
                     , Cardano.Catalyst.Presentation
                     , Cardano.CLI.Voting
                     , Cardano.CLI.Voting.Metadata
                     , Cardano.CLI.Voting.Signing
                     , Cardano.Catalyst.Test.DSL
                     , Cardano.Catalyst.Test.DSL.Gen
                     , Cardano.Catalyst.Test.DSL.Internal.Db
                     , Cardano.Catalyst.Test.DSL.Internal.Types
                     , Cardano.Catalyst.Query.Types
                     , Cardano.Catalyst.Query.Sql
                     , Cardano.Catalyst.Registration
                     , Cardano.Catalyst.VotePower
                     , Cardano.Db.Extended
                     , Config.Snapshot
                     , Config.Registration
                     , Config.Common
                     , Test.Generators

  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , attoparsec
                     , bech32
                     , binary
                     , bytestring
                     , cardano-db
                     , cardano-api
                     , cardano-binary
                     , cardano-cli
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-ledger-core
                     , containers
                     , hedgehog
                     , lens
                     , mtl
                     , optparse-applicative
                     , ouroboros-network
                     , persistent
                     , persistent-postgresql
                     , safe-exceptions
                     , text
                     , time
                     , unordered-containers

executable voting-tools
  import:              project-config
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , attoparsec
                     , bech32
                     , binary
                     , bytestring
                     , cardano-api
                     , cardano-binary
                     , cardano-cli
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-db
                     , cardano-ledger-byron
                     , cardano-ledger-core
                     , containers
                     , lens
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , ouroboros-network
                     , persistent-postgresql
                     , safe-exceptions
                     , text
                     , unordered-containers

  hs-source-dirs:      src/
  default-language:    Haskell2010
  other-modules:   Cardano.API.Extended
                 , Cardano.API.Extended.Raw
                 , Cardano.API.Jormungandr
                 , Cardano.Catalyst.Query.Sql
                 , Cardano.Catalyst.Query.Types
                 , Cardano.Catalyst.Registration
                 , Cardano.Catalyst.VotePower
                 , Cardano.Catalyst.Presentation
                 , Cardano.CLI.Voting
                 , Cardano.Db.Extended
                 , Cardano.CLI.Voting.Metadata
                 , Cardano.CLI.Voting.Signing
                 , Config.Common
                 , Config.Snapshot
                 , Config.Registration

test-suite unit-tests
  import:               project-config
  hs-source-dirs:       test
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  build-depends:  base >=4.12 && <5
                , aeson
                , cardano-api
                , containers
                , hedgehog
                , hedgehog
                , text
                , tasty
                , tasty-hedgehog
                , base16-bytestring
                , tasty-hunit
                , unordered-containers
                , voting-tools
                , cardano-crypto-class

  other-modules:        Test.Cardano.CLI.Voting.Metadata
                        Test.Cardano.API.Extended
                        Test.Cardano.API.Jormungandr
                        Test.Cardano.Catalyst.Presentation
                        Test.Cardano.CLI.Voting.Signing

test-suite integration-tests
  import:               project-config
  hs-source-dirs:       test/integration
                        test
                        src
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  build-depends:  base >=4.12 && <5
                , hedgehog
                , lifted-base
                , monad-control
                , monad-logger
                , mtl
                , persistent
                , persistent-postgresql
                , resource-pool
                , resourcet
                , tasty
                , tasty-hedgehog
                , text
                , transformers-base

                , aeson
                , aeson-pretty
                , attoparsec
                , bech32
                , binary
                , bytestring
                , cardano-api
                , cardano-binary
                , cardano-cli
                , cardano-crypto-class
                , cardano-crypto-wrapper
                , cardano-db
                , cardano-ledger-byron
                , cardano-ledger-core
                , containers
                , esqueleto
                , lens
                , monad-logger
                , mtl
                , optparse-applicative
                , ouroboros-network
                , persistent-postgresql
                , text
                , time
                , unordered-containers

  other-modules:        Test.Cardano.Catalyst.Db
                        Test.Cardano.Catalyst.Query
                        Cardano.Catalyst.Query.Sql
                        Test.Cardano.Catalyst.Helpers
                        Cardano.Catalyst.Query.Sql
                        Cardano.Catalyst.Query.Esqueleto
                        Cardano.Catalyst.Query.Types
                        Cardano.Catalyst.Registration
                        Cardano.Catalyst.VotePower
                        Cardano.API.Extended
                        Cardano.API.Extended.Raw
                        Cardano.API.Jormungandr
                        Cardano.Catalyst.Presentation
                        Cardano.CLI.Voting
                        Cardano.CLI.Voting.Metadata
                        Cardano.CLI.Voting.Signing
                        Cardano.Catalyst.Test.DSL
                        Cardano.Catalyst.Test.DSL.Gen
                        Cardano.Catalyst.Test.DSL.Internal.Db
                        Cardano.Catalyst.Test.DSL.Internal.Types
                        Config.Common
                        Test.Generators
                        Cardano.Db.Extended
