cabal-version:       3.0
name:                voting-tools
version:             0.3.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
-- copyright:
-- cate gory:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common project-config
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:              project-config
  hs-source-dirs:      src

  exposed-modules:     Cardano.API.Extended
                     , Cardano.API.Extended.Raw
                     , Cardano.Catalyst.Crypto
                     , Cardano.Catalyst.Test.DSL
                     , Cardano.Catalyst.Test.DSL.Gen
                     , Cardano.Catalyst.Test.VotePower.Gen
                     , Cardano.Catalyst.Test.DSL.Internal.Db
                     , Cardano.Catalyst.Test.DSL.Internal.Types
                     , Cardano.Catalyst.Query.Types
                     , Cardano.Catalyst.Query.Sql
                     , Cardano.Catalyst.Registration
                     , Cardano.Catalyst.Registration.Types
                     , Cardano.Catalyst.Registration.Types.Purpose
                     , Cardano.Catalyst.VotePower
                     , Cardano.Db.Extended
                     , Config.Snapshot
                     , Config.Common

  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , attoparsec
                     , base16-bytestring == 1.0.1.0
                     , bech32
                     , binary
                     , bytestring
                     , cardano-db
                     , cardano-api
                     , cardano-binary
                     , cardano-cli
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-ledger-core
                     , containers
                     , hedgehog
                     , lens
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , ouroboros-network
                     , persistent
                     , persistent-postgresql
                     , scientific
                     , text
                     , time
                     , unordered-containers
                     , vector

executable voting-tools
  import:              project-config
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , attoparsec
                     , base16-bytestring
                     , bech32
                     , bytestring
                     , cardano-api
                     , scientific
                     , cardano-binary
                     , cardano-cli
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-db
                     , cardano-ledger-core
                     , containers
                     , lens
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , ouroboros-network
                     , persistent-postgresql
                     , text
                     , unordered-containers
                     , vector

  hs-source-dirs:      src/
  default-language:    Haskell2010
  other-modules:   Cardano.API.Extended
                 , Cardano.API.Extended.Raw
                 , Cardano.Catalyst.Query.Sql
                 , Cardano.Catalyst.Query.Types
                 , Cardano.Catalyst.Registration
                 , Cardano.Catalyst.Registration.Types
                 , Cardano.Catalyst.VotePower
                 , Cardano.Db.Extended
                 , Cardano.Catalyst.Crypto
                 , Config.Common
                 , Config.Snapshot
                 , Cardano.Catalyst.Registration.Types.Purpose

test-suite unit-tests
  import:               project-config
  hs-source-dirs:       test
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  build-depends:  base >=4.12 && <5
                , aeson
                , cardano-api
                , containers
                , hedgehog
                , hedgehog
                , text
                , tasty
                , tasty-hedgehog
                , base16-bytestring
                , tasty-hunit
                , unordered-containers
                , voting-tools
                , cardano-crypto-class
                , vector

  other-modules:        Test.Cardano.Catalyst.Registration
                        Test.Cardano.API.Extended
                        Test.Cardano.Catalyst.VotePower
                        Test.Cardano.Catalyst.Crypto

test-suite integration-tests
  import:               project-config
  hs-source-dirs:       test/integration
                        test
                        src
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  build-depends:  base >=4.12 && <5
                , hedgehog
                , lifted-base
                , monad-control
                , monad-logger
                , mtl
                , persistent
                , persistent-postgresql
                , resource-pool
                , vector
                , resourcet
                , scientific
                , text
                , transformers-base
                , esqueleto
                , tasty
                , tasty-hedgehog

                , aeson
                , aeson-pretty
                , attoparsec
                , bech32
                , binary
                , bytestring
                , cardano-api
                , cardano-binary
                , cardano-cli
                , cardano-crypto-class
                , cardano-crypto-wrapper
                , cardano-db
                , cardano-ledger-core
                , containers
                , lens
                , monad-logger
                , mtl
                , optparse-applicative
                , ouroboros-network
                , persistent-postgresql
                , text
                , time
                , unordered-containers

  other-modules:        Test.Cardano.Catalyst.Db
                        Test.Cardano.Catalyst.Query
                        Cardano.Catalyst.Query.Sql
                        Test.Cardano.Catalyst.Helpers
                        Cardano.Catalyst.Query.Sql
                        Cardano.Catalyst.Query.Esqueleto
                        Cardano.Catalyst.Query.Types
                        Cardano.Catalyst.Registration
                        Cardano.Catalyst.Registration.Types
                        Cardano.Catalyst.Registration.Types.Purpose
                        Cardano.Catalyst.VotePower
                        Cardano.API.Extended
                        Cardano.API.Extended.Raw
                        Cardano.Catalyst.Crypto
                        Cardano.Catalyst.Test.DSL
                        Cardano.Catalyst.Test.DSL.Gen
                        Cardano.Catalyst.Test.DSL.Internal.Db
                        Cardano.Catalyst.Test.DSL.Internal.Types
                        Cardano.Catalyst.Test.VotePower.Gen
                        Config.Common
                        Cardano.Db.Extended
