cabal-version:       >=1.10
name:                fetch-registration
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
-- copyright:
-- cate gory:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable fetch-registration
  main-is:             Main.hs
  other-modules:       Config
  -- other-extensions:
  build-depends:       base
                     , cardano-api
                     , cardano-cli
                     , mtl
                     , optparse-applicative
                     , bytestring
                     , voter-registration
                     , ouroboros-network
                     , cardano-crypto-class
                     , cardano-binary
                     , containers
                     , cardano-ledger
                     , lens
                     , base16-bytestring
                     , shelley-spec-ledger
                     , ouroboros-consensus

  hs-source-dirs:      src/
  default-language:    Haskell2010