cabal-version:       >=1.10
name:                fetch-registration
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
-- copyright:
-- cate gory:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable fetch-registration
  main-is:             Main.hs
  other-modules:       Config
  -- other-extensions:
  build-depends:       base
                     , aeson
                     , scientific
                     , aeson-pretty
                     , persistent
                     , cardano-db
                     , monad-logger
                     , persistent-postgresql
                     , conduit
                     , attoparsec
                     , resourcet
                     , esqueleto
                     , base16-bytestring
                     , bech32
                     , bytestring
                     , cardano-api
                     , cardano-binary
                     , cardano-cli
                     , cardano-crypto-class
                     , cardano-ledger
                     , containers
                     , unordered-containers
                     , lens
                     , mtl
                     , optparse-applicative
                     , ouroboros-consensus
                     , ouroboros-consensus-cardano
                     , ouroboros-consensus-shelley
                     , ouroboros-network
                     , ouroboros-network-framework
                     , safe-exceptions
                     , shelley-spec-ledger
                     , text
                     , transformers-except
                     , voter-registration

  hs-source-dirs:      src/
  default-language:    Haskell2010