cabal-version:       3.0
name:                voter-registration
version:             0.3.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Samuel Evans-Powell
maintainer:          mail@sevanspowell.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ../CHANGELOG.md

common project-config
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
library
  exposed-modules: Config.Registration
  build-depends:       base
                     , aeson
                     , bytestring
                     , cardano-api
                     , mtl
                     , optparse-applicative
                     , ouroboros-network
                     , voting-tools
                     , cardano-cli
                     , cardano-api
                     , lens
                     , text
                     , attoparsec
                     , safe-exceptions
  hs-source-dirs:      src/
  default-language:    Haskell2010

executable voter-registration
  import:              project-config
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , cardano-api
                     , mtl
                     , optparse-applicative
                     , ouroboros-network
                     , voting-tools
                     , cardano-api
                     , voter-registration

  hs-source-dirs:      app/
  default-language:    Haskell2010
